add others page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Silentgram</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <nav class="app__navigation">
+        <a href="#" navigateTo="login" class="app__link link">Логин</a>
+        <a href="#" navigateTo="login" class="app__link link">Регистрация</a>
+        <a href="#" navigateTo="chats" class="app__link link">Чат</a>
+        <a href="#" navigateTo="profile" class="app__link link">Профиль</a>
+        <a href="#" navigateTo="profileChangeData" class="app__link link">Профиль смена данных</a>
+        <a href="#" navigateTo="profileChangePassword" class="app__link link">Профиль смена пароля</a>
+        <a href="#" navigateTo="error404" class="app__link link">Ошибка 404</a>
+        <a href="#" navigateTo="error500" class="app__link link">Ошибка 500</a>
+      </nav>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
